# Guardian

./: .gitignore  ARCHITECTURAL_DEEP_DIVE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
deploy/: operator.yaml  rbac.yaml
deploy/crds/: cloudenvironment.yaml  workloadplacementpolicy.yaml
deploy/gitops/: argocd-app.yaml
examples/: cost-optimizer.yaml
helm/guardian/: Chart.yaml  values.yaml
src/guardian/: decision_engine.py  handlers.py  metrics_collector.py  migration_orchestrator.py  ml_engine.py  models.py
tests/: test_decision_engine.py  test_metrics_collector.py  test_ml_engine.py
